--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/postgres
 spring.datasource.username=there
 spring.datasource.password=is_nothing_to_steal
 spring.jpa.database=POSTGRESQL
