--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.url=jdbc:postgresql://136.243.64.85:5432/postgres
-spring.datasource.username=there
-spring.datasource.password=is_nothing_to_steal
+#spring.datasource.url=jdbc:postgresql://136.243.64.85:5432/postgres
+#spring.datasource.username=there
+#spring.datasource.password=is_nothing_to_steal
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
